--- a/red/templates/red/feed.html
+++ b/red/templates/red/feed.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,400;0,800;1,400;1,800&family=Inter:wght@300;500;800&family=Overpass:wght@700&family=JetBrains+Mono:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'red/style/font.css' %}">
     <!--  REMOVE THOSE UP HERE AND REPLACE WITH CSS ASSETS INCLUDE!!  -->
     <link rel="stylesheet" href="{% static 'red/style/feed.css' %}">
     {% if sub %}
@@ -46,7 +47,7 @@
     <nav>
         <a href="/">
             <header>
-                <img src="{% static 'red/assets/r_min.png' %}"></img>
+                <img src="{% static 'red/assets/Rlogo.svg' %}"></img>
                 <h1>Red</h1>
             </header>
         </a>
